--- a/app/assets/stylesheets/amazon_assets/attachments_fields.scss
+++ b/app/assets/stylesheets/amazon_assets/attachments_fields.scss
@@ -47,7 +47,11 @@ $left-indent: 27px;
 .attachments-fields-link-controller { position: absolute; cursor: pointer; top: -10px; right: -10px; width: 10000px; height: 10000px; opacity: 0; }
 .attachments-fields-link-text { display: inline-block; cursor: pointer; border-bottom: 1px dashed; user-select: none; }
 
-.attachments-fields-errors { display: none; margin: 10px 0 0; color: #f30; font-size: 11px; }
+.attachments-fields-errors {
+  color: #f30; font-size: 11px;
+
+  & + & { margin-top: 10px; }
+}
 
 .attachments-fields-tips { font-size: 11px; color: #999; }
 
