--- a/app/views/apress/amazon_assets/_attachments_fields.html.haml
+++ b/app/views/apress/amazon_assets/_attachments_fields.html.haml
@@ -28,7 +28,8 @@
       .attachments-fields-errors-item.dn.js-error-message-format
         = t('views.apress.amazon_assets.attachments_fields.error_messages.format_is_invalid')
         %a.attachments-fields-icon.question.js-qtip-icon{data: {content: t('views.apress.amazon_assets.attachments_fields.requirements.format',
-                                                                           count: options[:max_count])}}
+                                                                           count: options[:max_count]),
+                                                                style: options[:tip_class_name]}}
       .attachments-fields-errors-item.dn.js-error-message-size
         = t('views.apress.amazon_assets.attachments_fields.error_messages.size_is_invalid',
             size: "#{options[:max_size]} #{t('views.apress.amazon_assets.attachments_fields.units_of_measure.MB')}")
